// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography should render correctly 1`] = `
<p
  class="Typography-text-0-1-8"
>
  Foo
</p>
`;

exports[`Typography should render correctly with variant h1 1`] = `
<h1
  class="Typography-h1-0-1-2"
>
  Foo
</h1>
`;

exports[`Typography should render correctly with variant h2 1`] = `
<h2
  class="Typography-h2-0-1-4"
>
  Foo
</h2>
`;

exports[`Typography should render correctly with variant h3 1`] = `
<h3
  class="Typography-h3-0-1-5"
>
  Foo
</h3>
`;

exports[`Typography should render correctly with variant h4 1`] = `
<h4
  class="Typography-h4-0-1-6"
>
  Foo
</h4>
`;

exports[`Typography should render correctly with variant h5 1`] = `
<h5
  class="Typography-h5-0-1-7"
>
  Foo
</h5>
`;

exports[`Typography should render correctly with variant headline 1`] = `
<h2
  class="Typography-headline-0-1-3"
>
  Foo
</h2>
`;

exports[`Typography should render correctly with variant main 1`] = `
<h1
  class="Typography-main-0-1-1"
>
  Foo
</h1>
`;

exports[`Typography should render correctly with variant text 1`] = `
<p
  class="Typography-text-0-1-8"
>
  Foo
</p>
`;
